--- a/Todo-Task-app/package.json
+++ b/Todo-Task-app/package.json
@@ -17,7 +17,8 @@
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
